<resources>


    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="app_name">MSF Communique</string>
    <string name="action_settings">Logout</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="login_title">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="username">Username</string>
    <string name="patientForm_btn">Patient forms</string>
    <string name="appointment_btn">Appointments</string>
    <string name="title_activity_patient_forms">Patient Forms</string>
    <string name="title_activity_appointments">Appointments</string>
    <string name="new_patient">New patient form</string>
    <string name="title_activity_new_patient">New Patient Form</string>
    <string name="title_activity_pilot_enrollment">Pilot Enrollment Form</string>
    <string name="patient_fname">First Name</string>
    <string name="patient_sname">Last Name</string>
    <string name="dob">Date of birth</string>
    <string name="curr_facility">Reference Health Centre</string>
    <string name="currFacility_text">Enter patient current facility</string>
    <string name="fname_text">Enter patient name</string>
    <string name="sname_text">Enter patient surname</string>
    <string name="submit_btn">Submit</string>
    <string name="title_activity_patient_list">Patients</string>
    <string name="title_activity_pilot_programs">Pilot Program Form</string>
    <string name="addPilottextView">Add a pilot program.</string>
    <string name="entrolTV">Enroll a patient into a pilot program.</string>
    <string name="addPatientTV">Add a new patient.</string>
    <string name="title_activity_counselling_session">Counselling Sessions</string>
    <string name="title_activity_appointment">Appointments</string>
    <string name="addAppointmentTV">Create new appointment.</string>
    <string name="addSessionTV">Add a new counselling session.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_enrollment_list">Enrollment List</string>
    <string name="title_activity_patient_info">Patient Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_update_patient">Update Patient Information</string>
    <string name="title_activity_appointment_list">Appointment List</string>
    <string name="title_activity_appointment_info">Appointment Info</string>
    <string name="title_activity_update_apppointment">Update Appointment</string>
    <string name="title_activity_counselling_list">CounsellingListActivity</string>
    <string name="title_activity_conunselling_info">ConunsellingInfoActivity</string>
    <string name="title_activity_update_counselling">UpdateCounsellingActivity</string>
    <string name="title_activity_enrollment_info">EnrollmentInfoActivity</string>
    <string name="title_activity_update_enrollment">UpdateEnrollmentActivity</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Notifications</item>
        <item>Patients</item>
        <item>Appointments</item>
        <item>Counselling</item>
        <item>Pilot Enrollments</item>
        <item>Admissions</item>
        <item>Events</item>
        <item>Medical Records</item>
        <item>Adverse Events</item>
        <item>Medication</item>
        <item>Patient Outcomes</item>
        <item>File Uploads</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
