<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.msf.msf.Fragments.PatientFragments.CreatePatientFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/addPatientTV"
            android:id="@+id/addPatientTV" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_fname"
            android:id="@+id/fname"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/fname_text"
            android:ems="10"
            android:id="@+id/patient_fname" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_sname"
            android:id="@+id/sname"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/sname_text"
            android:ems="10"
            android:id="@+id/patient_sname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sex"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sexSpinner"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:id="@+id/dob"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="DD/MM/YYYY"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/patient_dob" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/curr_facility"
            android:id="@+id/curr_facility"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/currFacility_text"
            android:ems="10"
            android:id="@+id/patient_curr_facitlity" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_btn"
            android:id="@+id/submit_newPatient"
            android:layout_marginTop="20dip"
            android:background="#ff6347"
            android:textColor="#fff"
            android:textSize="15dp" />
    </LinearLayout>

</ScrollView>
