<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.msf.msf.Fragments.Patient.UpdatePatientFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/addPatientTV"
            android:id="@+id/addPatientTV" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_fname"
            android:id="@+id/fname"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint=""
            android:ems="10"
            android:id="@+id/patient_fname" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_sname"
            android:id="@+id/sname"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint=""
            android:ems="10"
            android:id="@+id/patient_sname" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Patient Identifier"
            android:id="@+id/id"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/identifier" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:id="@+id/dob"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="DD/MM/YYYY"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/patient_dob" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sex"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sexSpinner"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Contact number 1"
            android:id="@+id/contact"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/patient_contact" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Contact number 2"
            android:id="@+id/contact2"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/patient_contact2" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Contact number 3"
            android:id="@+id/contact3"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/patient_contact3" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Treatment start date"
            android:id="@+id/tx_start"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="DD/MM/YYYY"
            android:ems="10"
            android:id="@+id/tx_start_date" />

        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Interim Outcome"
        android:id="@+id/tx"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint=""
            android:ems="10"
            android:id="@+id/interim_outcome"/>

        <TextView
            android:text="Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/patient_location" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/curr_facility"
            android:id="@+id/curr_facility"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint=""
            android:ems="10"
            android:id="@+id/patient_curr_facitlity" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_btn"
            android:id="@+id/submit_newPatient"
            android:layout_marginTop="20dip"
            android:background="#ff6347"
            android:textColor="#fff"
            android:textSize="15dp" />
    </LinearLayout>

</ScrollView>
